kubernetes/deployment-ms1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice-1
  template:
    metadata:
      labels:
        app: microservice-1
    spec:
      containers:
        - name: microservice-1
          image: sahilmisri27/microservice-1:v7
          ports:
            - containerPort: 3000
