kubernetes/deployment-ms2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-2-version1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice-2
  template:
    metadata:
      labels:
        app: microservice-2
        version: v1
    spec:
      containers:
        - name: microservice-2
          image: sahilmisri27/microservice-2:v1
          ports:
            - containerPort: 3001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-2-version2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice-2
  template:
    metadata:
      labels:
        app: microservice-2
        version: v2
    spec:
      containers:
        - name: microservice-2
          image: sahilmisri27/microservice-2:v2
          ports:
            - containerPort: 3001
