kubernetes/deployment-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice-1
  labels:
    app: microservice-1
    service: microservice-1
spec:
  ports:
  - port: 3000
    name: http
  selector:
    app: microservice-1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-1
  labels:
    app: microservice-1
    version: test4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice-1
      version: test4
  template:
    metadata:
      labels:
        app: microservice-1
        version: test4
    spec:
      serviceAccountName: microservice-1
      containers:
      - name: microservice-1
        image: sahilmisri27/microservice-1:test4
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
