kubernetes/service-ms1.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice-1
spec:
  selector:
    app: microservice-1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
