kubernetes/service-ms2.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice-2
spec:
  selector:
    app: microservice-2
  ports:
    - protocol: TCP
      port: 81
      targetPort: 3001
