kubernetes/istio-config.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-configuration
  namespace: default
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"   # Domain name of the external website

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microservice
spec:
  hosts:
  - "*"
  gateways:
    - ingress-gateway-configuration
  http:
  - name: "microservice-1-routes"
    match:
    - uri:
        prefix: "/m1"
    route:
    - destination:
        host: "microservice-1"
        subset: test4
        port:
          number: 3000
  - name: "microservice-2-routes"
    match:
    - uri:
        prefix: "/m2"
    route:
    - destination:
        host: "microservice-2"
        subset: test2-bad
        port:
          number: 3001
      weight: 50
    - destination:
        host: "microservice-2"
        subset: test2
        port:
          number: 3001
      weight: 50

---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: grouping-rules-for-microservice-1 # This can be anything you like.
  namespace: default
spec:
  host: microservice-1 # Service
  subsets:
    - labels:   # SELECTOR.
        version: test4 # find pods with label "v1"
      name: test4
